--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.PMV2"
         tools:targetApi="31">
-
         <activity
-            android:name=".ActivityPage"
+            android:name=".ActivityList"
             android:exported="true">
 
             <intent-filter>
@@ -22,13 +21,20 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity
+            android:name=".ActivityPage"
+            android:exported="true">
 
         </activity>
 
         <activity
             android:name=".MainActivity"
             android:exported="true">
+
         </activity>
 
     </application>
+
 </manifest>
