--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.PMV2"
         tools:targetApi="31">
         <activity
-            android:name=".ActivityList"
+            android:name=".ActivityDash"
             android:exported="true">
 
             <intent-filter>
@@ -21,6 +21,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
+        </activity>
+
+        <activity
+            android:name=".ActivityList"
+            android:exported="true">
+
         </activity>
 
         <activity
